fix: add responsive h1 letter spacing

--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -18,7 +18,7 @@ h3 {
 h1 {
   font-size: 3rem;
   line-height: 1;
-  letter-spacing: 1rem;
+  letter-spacing: 0.4rem;
 }
 
 h2 {
@@ -32,4 +32,14 @@ a {
 
 a:hover {
   text-decoration: none;
+}
+
+/*
+  Tablet
+*/
+
+@media screen and (width >= 40em) {
+  h1 {
+    letter-spacing: 1rem;
+  }
 }
